# Sakura

./: .gitignore  CMakeLists.txt
Sakura/: CMakeLists.txt
Sakura/scripts/: compile_shaders.bat
Sakura/src/: Application.cpp  Application.h  Main.cpp  Window.h
Sakura/src/Core/: Application.cpp  Application.h  Debug.cpp  Debug.h  Device.cpp  Device.h  Main.cpp  Window.cpp  Window.h
Sakura/src/Renderer/: GraphicsPipeline.cpp  GraphicsPipeline.h
Sakura/src/Shaders/: simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
Sandbox/: CMakeLists.txt
Sandbox/src/: SandboxApp.cpp
